2003-08-03  Matthias Clasen  <maclas@gmx.de>

	* doc/gnome.txt: Add some hints regarding markup of examples. 

2003-07-22  Matthias Clasen  <maclas@gmx.de>

	* configure.in: 
	* gtk-doc.cat: Fix a problem with the previous commit.

2003-07-21  Matthias Clasen  <maclas@gmx.de>

	Applied patches from Sebastian Rittau to add maintainer mode and an SGML catalog.  (#117955, #117956)

	* gtk-doc.cat.in: New catalog file.
	* configure.in: Added gtk-doc.catalog to output files.
	* Makefile.am: Install gtk-doc.catalog.

	* configure.in: Added AM_MAINTAINER_MODE.
	* autogen.sh: Added --enable-maintainer-mode to configure options.

2003-07-09  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mktmpl.in (ParseStructDeclaration): 
	* gtkdoc-mkdb.in (ParseStructDeclaration): Accept volatile struct members, which have just
	made their appearance in glib.

2003-06-29  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ExpandAbbreviations): When expanding @param, catch the common @param->field
	and @param.field, to reduce the need for littering the C sources with <literal>foo->bar</literal>.

2003-06-25  Matthias Clasen  <maclas@gmx.de>

	Changes for #115528:
	
	* gtkdoc-mkdb.in (OutputSGML): Collect hierarchy, interfaces, implementations, prerequisites
	and derived interfaces separately.
	(OutputSGMLFile): Take two more arguments: implementations and derived interfaces.
	(GetHierarchy): Also put immediate children in the local tree.
	(GetInterfaces): Split into GetInterfaces and GetImplementations.
	(GetImplementations): New function to get the implementations of an interface.
	(GetDerived): New function to get the known derived interfaces of an interface.

	* gtkdoc-mkdb.in (MakeXRef): Accept a second, optional parameter for the
	text of the link.
	(ExpandAbbreviations): Add semantic markup inside the links, so that 
	non-crossreferenced symbols come out properly formatted after link
	removal.  (#61345)

2003-06-15  Matthias Clasen  <maclas@gmx.de>
