@@ -1,4 +1,12 @@
   -- ...................................................................... --
-  -- Modified GTK+ DocBook driver file .................................................. --
-
+  -- Modified GTK+ DocBook driver file .................................... --
+  -- ...................................................................... --
+                                                                                
 PUBLIC "-//Gnome//DTD DocBook V3.0 extension//EN" "gtk-doc.dtd"
+
+  -- ...................................................................... --
+  -- DSSL stylesheet ...................................................... --
+  -- ...................................................................... --
+
+PUBLIC "-//Gtk//DOCUMENT Gtk-doc HTML Stylesheet//EN"
+  "/opt/gtk2/share/gtk-doc/data/gtk-doc.dsl"
